# ratlang

./: Cargo.toml  README.md  README_zh.md
benchmarks/: perf_primes.py
crates/rat/: Cargo.toml
crates/rat/src/: main.rs
crates/ratc/: Cargo.toml
crates/ratc/src/: main.rs
crates/ratdoc/: Cargo.toml
crates/ratdoc/src/: main.rs
crates/ratfmt/: Cargo.toml
crates/ratfmt/src/: main.rs
crates/ratlang/: Cargo.toml
crates/ratlang/examples/: run_example.rs
crates/ratlang/src/: ast.rs  compiler.rs  diagnostics.rs  docs.rs  fmt.rs  lexer.rs  lib.rs  parser.rs  position.rs  runtime.rs  source.rs  tokens.rs  typeck.rs  types.rs
crates/ratlang/tests/api/: control_flow.rs  feature_tour.rs  helper.rs  main.rs
crates/ratls/: Cargo.toml
crates/ratls/src/: main.rs
crates/ratpkg/: Cargo.toml
crates/ratpkg/src/: main.rs
examples/: classic_suite.rat  example.rat  feature_tour.rat  perf_primes.rat  production_dashboard.rat  showcase.rat
