[workspace]
members = [
    "crates/ratlang",
    "crates/ratc",
    "crates/rat",
    "crates/ratpkg",
    "crates/ratfmt",
    "crates/ratdoc",
    "crates/ratls",
]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.74"
authors = ["ratlang project maintainers <dev@ratlang.org>"]
license = "Apache-2.0"

[workspace.dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
async-trait = "0.1"
futures = "0.3"
tokio = { version = "1.35", features = ["rt-multi-thread", "macros", "sync", "time", "fs", "signal"] }
async-channel = "1.9"
parking_lot = "0.12"
smol_str = "0.2"
indexmap = "2.0"
itertools = "0.12"
logos = "0.13"
regex = "1.10"
clap = { version = "4.4", features = ["derive"] }
camino = "1.1"
path-absolutize = "3.1"
tempfile = "3.8"
rayon = "1.8"
bytes = "1.5"
tower-lsp = "0.20"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing-error = "0.2"
console = "0.15"
indicatif = "0.17"
figment = { version = "0.10", features = ["toml", "yaml", "env"] }
notify = "6.1"
glob = "0.3"
walkdir = "2.4"
semver = "1.0"
url = "2.4"
reqwest = { version = "0.11", features = ["json", "gzip", "brotli", "rustls-tls"] }
async-recursion = "1.0"
smallvec = "1.11"
prettyplease = "0.2"
proc-macro2 = "1.0"
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
unescaper = "0.1"
serde_repr = "0.1"
color-eyre = "0.6"
