[package]
name = "ratc"
version = "0.1.0"
edition = "2021"
authors = ["ratlang project maintainers <dev@ratlang.org>"]
license = "Apache-2.0"
description = "Ratlang ahead-of-time compiler CLI (stub)."

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
ratlang = { path = "../ratlang" }

[dev-dependencies]
assert_cmd = "2.0"
