[package]
name = "ratdoc"
version = "0.1.0"
edition = "2021"
authors = ["ratlang project maintainers <dev@ratlang.org>"]
license = "Apache-2.0"
description = "Ratlang documentation generator (stub)."

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
ratlang = { path = "../ratlang" }
