[package]
name = "ratpkg"
version = "0.1.0"
edition = "2021"
authors = ["ratlang project maintainers <dev@ratlang.org>"]
license = "Apache-2.0"
description = "Ratlang package manager (stub)."

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ratlang = { path = "../ratlang" }
